--- a/todo/static/css/main.css
+++ b/todo/static/css/main.css
@@ -4,7 +4,9 @@
 }
 
 html {
-    font-size: 25px;
+    user-select:none;
+    zoom: 200%;
+    font-size: 20px;
     min-height: 100vh;
 }
 
@@ -51,7 +53,7 @@ header .boxheadm .todotitle {
     margin-top: 15px;
     margin-bottom: 35px;
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    /* grid-template-columns: repeat(2, auto); */
     grid-gap: 20px;
     text-align: center;
     align-items: center;
@@ -67,7 +69,7 @@ header .boxheadm .todotitle {
 
 .HeaderSubGroup .buts {
     display: grid;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(3, auto);
     grid-gap: 10px;
     text-decoration: none;
     list-style: none;
@@ -76,6 +78,7 @@ header .boxheadm .todotitle {
 .HeaderSubGroup .buts .but1{
     background: url("../img/complate.png") no-repeat;
     width: 110%;
+    
 }
 .HeaderSubGroup .buts .buttt{
     background: url("../img/complate.png") no-repeat;
