--- a/todo/static/css/main.css
+++ b/todo/static/css/main.css
@@ -4,8 +4,11 @@
 }
 
 html {
-    -moz-user-select:none;
+    -webkit-touch-callout:none;
     -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
     user-select:none;
     zoom: 200%;
     font-size: 20px;
